--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,5 @@ main: io.github.teamdevintia.devathlon3.Devathlon3
 authors: [TeamDevintia]
 description: 'TeamDevintia''s entry for Devathlon3'
 website: 'https://github.com/TeamDevintia/DevAthlon3'
+commands:
+    test:
