--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <developer>
             <name>batthomas</name>
             <roles>
-                <role>developer</role>
+                <role>designer</role>
             </roles>
         </developer>
         <developer>
